--- a/app/src/main/res/layout/app_bar_dashboard.xml
+++ b/app/src/main/res/layout/app_bar_dashboard.xml
@@ -18,11 +18,9 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <include layout="@layout/fragment_home" />
+        <include layout="@layout/layout_totalcost" />
 
     </android.support.design.widget.AppBarLayout>
-
-    <!--
 
     <LinearLayout
         android:id="@+id/fragmentContainer"
@@ -30,8 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-        -->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
