--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,6 @@
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
-
                 android:layout_height="wrap_content"
                 android:text="Cost Breakdown"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -34,6 +33,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <android.support.v7.widget.RecyclerView
+                android:id="@+id/costBreakdownRV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -74,7 +74,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <android.support.v7.widget.RecyclerView
+            <android.support.v7.widget.RecyclerView android:id="@+id/recentPurchaseRV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
