--- a/app/src/main/res/layout/layout_totalcost.xml
+++ b/app/src/main/res/layout/layout_totalcost.xml
@@ -14,71 +14,60 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/currency_currentCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PHP"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="?android:attr/textColorSecondary"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintBottom_toBottomOf="@+id/currentCost"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView3" />
+            app:layout_constraintTop_toTopOf="@+id/currentCost"
+            tools:text="PHP" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/currentCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1,440"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="?android:attr/textColorPrimary"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text=".00"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="?android:attr/textColorPrimary"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintStart_toEndOf="@+id/textView3" />
+            app:layout_constraintStart_toEndOf="@+id/currency_currentCost"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="1,440.00" />
 
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/costBar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
             android:layout_height="9dp"
-            android:max="100"
-            android:progress="72"
             android:progressBackgroundTint="@color/colorPrimaryDark"
+            tools:max="100"
+            tools:progress="72"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/currentCost"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/currency_currentSavings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="PHP"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="?android:attr/textColorSecondary"
-            app:layout_constraintBottom_toBottomOf="@+id/textView6"
-            app:layout_constraintEnd_toStartOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="@+id/textView6" />
+            tools:text="PHP"
+            app:layout_constraintBottom_toBottomOf="@+id/currentSavings"
+            app:layout_constraintEnd_toStartOf="@+id/currentSavings"
+            app:layout_constraintTop_toTopOf="@+id/currentSavings" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/currentSavings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2000.00"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="?android:attr/textColorPrimary"
+            tools:text="2000.00"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+            app:layout_constraintTop_toBottomOf="@+id/costBar" />
 
 
     </android.support.constraint.ConstraintLayout>
